basic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress1
spec:
  backend:
    serviceName: my-cb-web-server-gke
    servicePort: 8080
