fanout-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: my-cb-web-server-gke 
          servicePort: 8080
      - path: /v2/*
        backend:
          serviceName: my-web-server-gke
          servicePort: 8080
